traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:14: error: not found: value y
    setPos(x,y)
             ^