traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
var compt:Int=0
override def run() {
  var posFin:Boolean=false
  while (posFin != true){
    avancer()
  	if (getX()==getMondeLargeur()-1 && getY()==getMondeHauteur()-1){
      posFin=true
    }
  
  }
}

def avancer() {
  for( x<- 0 to getMondeLargeur){
    setPos(x,y)
    
    
  }
      
     
    }
  
 